--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
-sonar.projectKey=
-sonar.organization=
+sonar.projectKey=iamDayoDev_github-actions-netflix-app-deploy
+sonar.organization=iamdayodev
